Migrate to Spring Boot 3 and Java 19